2005-01-24  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc (update): Allow backwards/sideways updates.
	tests/t_update_to_revision.at: remove XFAIL

2006-01-23  Nathaniel Smith  <njs@pobox.com>

	* database.{cc,hh}: Clean up code formatting a bit, rename some
	variables, rely more on automatic conversion.

2006-01-24  Vinzenz Feenstra <evilissimo@c-plusplus.de>
	
	* query_args.hh: Introduced struct query_args and struct
	query_args_param. Used to typesafe arguments for database::execute
	and database::fetch
	* database.cc/.hh: Adjusted database to the new fetch and execute
	argument style via operator% which is more typesafe.

2006-01-23  Nathaniel Smith  <njs@pobox.com>

	* database.cc (assert_sqlite3_ok): Improve the hint message given
	for SQLITE_ERROR's.

2006-01-23  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/t_database_check_normalized.at: update included database to
	use rosters

2006-01-23  Timothy Brownawell  <tbrownaw@gmail.com>

	New ChangeLog utilities in contrib/ .
	* contrib/ChangeLog.sh: Script that takes the date, author, and
	changelog certs from the last n revisions and prints them in standard
	ChangeLog format.
	* contrib/edit_comment_from_changelog.lua: an edit_comment hook that
	takes the initial commit message from the most recent ChangeLog entry

2006-01-23  Henry Nestler  <henry@bigfoot.de>

	* monotone.texi, monotone.1: Mode none for --ticker.

2006-01-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (update): Hopefully improve wording of help a bit.

2006-01-21  Nathaniel Smith  <njs@pobox.com>

	* netcmd.cc (read): Expand the error message we issue on protocol
	version mismatch to be a bit more informative.

2006-01-21  Matthew Gregan  <kinetik@orcon.net.nz>

	* configure.ac: Fix up Windows and IPv6 tests after the change
	from AC_TRY_RUN to AC_TRY_COMPILE.  Also a couple of other minor
	cleanups.
	* Makefile.am: Remove win32/wcwidth.c from WIN32_PLATFORM_SOURCES.

2006-01-21  Timothy Brownawell  <tbrownaw@gmail.com>
